# token-monitor

./: .gitignore  LICENSE  README.md  index.html  package.json
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  auth.rs  commands.rs  lib.rs  main.rs
